[tool.poetry]
name = "bis-econocom-demo"
version = "0.1.0"
description = ""
authors = ["Bernard Wezeman"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
dagster-webserver = "^1.4.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
singer-sdk = "^0.31.1"
dagster = "^1.4.7"
dagster-meltano = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
